crates/cli/tests/snapshots/redis__redis_install_uses_manifest_default_and_installs_without_network_download.snap
---
source: crates/cli/tests/redis.rs
expression: snapshot
---
(
    RunOutput {
        exit_code: ExitCode(
            unix_exit_status(
                0,
            ),
        ),
        stdout: "Installed Redis track 7 (7.2.5-pv1)\n",
        stderr: "warning: PV daemon is not running; reconciliation will run after `pv setup` starts it\n",
    },
    [
        ResourceRecordSnapshot {
            resource_name: "redis",
            track: "7",
            desired_state: "Installed",
            installed_version: Some(
                "7.2.5-pv1",
            ),
            current_artifact_path: Some(
                "home/.pv/resources/redis/7/releases/7.2.5-pv1",
            ),
            usage_count: 0,
            removal_prune: false,
            removal_force: false,
        },
    ],
    1,
    0,
)
