crates/cli/tests/snapshots/redis__redis_uninstall_force_prune_queues_removal_intent.snap
---
source: crates/cli/tests/redis.rs
expression: snapshot
---
(
    RunOutput {
        exit_code: ExitCode(
            unix_exit_status(
                0,
            ),
        ),
        stdout: "Queued removal for Redis track 7\n  data will be pruned\n",
        stderr: "warning: PV daemon is not running; reconciliation will run after `pv setup` starts it\n",
    },
    [
        ResourceRecordSnapshot {
            resource_name: "redis",
            track: "7",
            desired_state: "Removed",
            installed_version: Some(
                "7.2.5-pv1",
            ),
            current_artifact_path: Some(
                "home/.pv/resources/redis/7/releases/7.2.5-pv1",
            ),
            usage_count: 0,
            removal_prune: true,
            removal_force: true,
        },
    ],
)
