crates/cli/tests/snapshots/redis__redis_uninstall_preserves_data_on_both_surfaces.snap
---
source: crates/cli/tests/redis.rs
expression: snapshot
---
(
    RunOutput {
        exit_code: ExitCode(
            unix_exit_status(
                0,
            ),
        ),
        stdout: "Queued removal for Redis track 7\n  data preserved under <tempdir>/home/.pv/resources/redis/7/data\n",
        stderr: "warning: PV daemon is not running; reconciliation will run after `pv setup` starts it\n",
    },
    RunOutput {
        exit_code: ExitCode(
            unix_exit_status(
                0,
            ),
        ),
        stdout: "✓  Removal requested for Redis track 7\n   ·  data preserved under\n   <tempdir>/terminal-home/.pv/resources/redis/7/data\n",
        stderr: "warning: PV daemon is not running; reconciliation will run after `pv setup` starts it\n",
    },
)
