crates/cli/tests/snapshots/redis__redis_uninstall_prune_on_a_terminal.snap
---
source: crates/cli/tests/redis.rs
expression: snapshot
---
RunOutput {
    exit_code: ExitCode(
        unix_exit_status(
            0,
        ),
    ),
    stdout: "✓  Removal requested for Redis track 7\n   ·  data will be pruned\n",
    stderr: "warning: PV daemon is not running; reconciliation will run after `pv setup` starts it\n",
}
