crates/cli/tests/snapshots/redis__redis_uninstall_prune_reports_unsupported_target_before_confirmation.snap
---
source: crates/cli/tests/redis.rs
expression: snapshot
---
RunOutput {
    exit_code: ExitCode(
        unix_exit_status(
            1,
        ),
    ),
    stdout: "",
    stderr: "error: unsupported artifact platform `linux-aarch64`\n",
}
